--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha01'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.annotation:annotation:1.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -80,7 +81,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'             // image loader
     implementation 'com.wdullaer:materialdatetimepicker:3.2.0'         // date & time picker
     implementation 'com.mikhaellopez:circularimageview:3.2.0'          // circle image view
-
+    // icon fonts used inside the app
+    // https://github.com/mikepenz/Android-Iconics
+    implementation 'com.mikepenz:google-material-typeface:4.0.0.2-kotlin@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:5.13.3.0-kotlin@aar'
+    implementation 'com.mikepenz:octicons-typeface:11.1.0.0-kotlin@aar'
+    //to prevent initialization problems
+    implementation "androidx.startup:startup-runtime:1.0.0"
 }
 // ADD THIS AT THE BOTTOM
 apply plugin: 'com.google.gms.google-services'
