--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name=".HomeActivity"
             android:exported="true"
-            android:label="@string/title_activity_home"
+            android:label="@string/app_name"
             android:theme="@style/Theme.MainTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
