--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseMVVM">
-        <activity android:name=".ui.splash.SplashActivity"
+        <activity
+            android:name=".ScrollingActivity"
+            android:exported="false"
+            android:label="@string/title_activity_scrolling"
+            android:theme="@style/Theme.FirebaseMVVM.NoActionBar" />
+        <activity
+            android:name=".ui.splash.SplashActivity"
             android:exported="true"
-            android:theme="@style/Theme.MainTheme">
-
-        </activity>
+            android:theme="@style/Theme.MainTheme"></activity>
         <activity
             android:name=".HomeActivity"
-            android:windowSoftInputMode="adjustPan"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MainTheme">
+            android:theme="@style/Theme.MainTheme"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
